# so_long

./: .gitignore  CMakeLists.txt  Makefile  README.md  cat.xpm  circle.xpm  fon-64.xpm  fon.xpm  fon2.xpm  fon3.xpm  fon5.xpm  fon64.xpm  fon7.xpm  fon8.xpm  fon9.xpm  get_next_line.c  graphic.c  home.xpm  house.xpm  main.c  map.c  matrix_arr.c  moved.c  sausage.xpm  so_long  so_long.h  tekstura.xpm  test.xpm  test_bon.ber
img/: 1-2.xpm  1-3.xpm  1-4.xpm  1.xpm  dog-2.xpm  grass.xpm  png.xpm  sos.xpm  sos_up-copy.xpm  sos_up.xpm
include/: get_next_line.h  so_long.h
src/: get_next_line.c  graphic.c  main.c  map.c  map_bonus.c  matrix_arr.c  moved.c  moved_bonus.c  so_long_utils.c
